tests/data/placebo/test_security_group_default_vpc_filter/ec2.DescribeVpcs_1.json
{
  "status_code": 200,
  "data": {
    "Vpcs": [
      {
        "VpcId": "vpc-d2d616b5",
        "InstanceTenancy": "default",
        "State": "available",
        "DhcpOptionsId": "dopt-24ff1940",
        "CidrBlock": "172.31.0.0/16",
        "IsDefault": true
      }
    ],
    "ResponseMetadata": {}
  }
}
